# Data-Warehouse-Exam

./: .dockerignore  .gitignore  Dockerfile.eltfire  README.md  alembic.ini  docker-compose.yml  examen_entrepot_de_données.ipynb  pyproject.toml  requirements.txt  run_insert.py
app/: .env.example
app/alembic/: env.py
app/alembic/versions/: 2807e77cf736_initial_migration.py
app/commands/eltfire/: Dockerfile  eltfire.py
app/commands/init_db/: Dockerfile  init_db.py
app/database/: models.py  session.py
app/minio_uploader/: file_uploader.py
app/utils/: download.py  insert_data.py
